--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -65,6 +65,7 @@
         position: fixed;
         right: 0;
         color: #666;
+        user-select: none;
 
         > * {
             display: inline-block;
