--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -259,6 +259,10 @@ p + .revealed {
 /* ReSharper restore DeclarationIsEmpty */
 /*#endregion */
 
+.container .jumbotron {
+	margin-top: 40px;
+}
+
 .jumbotron-logo {
 	float: left;
     margin: -20px 30px 0;
