Truncate course name in CourseMenu

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -58,6 +58,15 @@
                 background-color: #f2f2f2;
                 cursor: pointer;
             }
+
+            .courseName {
+                display: inline-block;
+                vertical-align: top;
+                max-width: 200px;
+                overflow-x: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
         }
     }
 
