--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -98,6 +98,7 @@
 
         .header__notifications-icon {
             padding: 11px 0 11px 18px;
+            height: @headerHeight;
 
             .icon {
                 font-size: 20px;
