--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 	<div class="container body-content">
 		<div class="jumbotron">
 			<img src="~/Content/logo.png" class="jumbotron-logo" />
-			<h1>Ulearn</h1>
+			<h1>Ulearn.me</h1>
 			<p class="lead">Интерактивные онлайн-курсы по&nbsp;программированию</p>
 			<div class="clearfix"></div>
 		</div>
