--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -38,7 +38,12 @@
                 padding-left: 15px;
                 padding-right: 15px;
             }
-        }        
+        }
+
+        .visible-only-phone {
+            color: #666;
+            font-size: 20px;
+        }
     }
 
     .header__course-menu,
@@ -74,6 +79,14 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
             }
+        }
+
+        .icon {
+            display: inline-block;
+            color: #666;
+            font-size: 20px;
+            height: 50px;
+            padding: 11px 15px 11px 0;
         }
     }
 
