ToC menu for phones
+ refactoring

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -46,6 +46,7 @@
         }
     }
 
+    .header__toc-menu,
     .header__course-menu,
     .header__sysadmin-menu,
     .header__my-courses-menu {
