Concat two course menus on phones

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -50,6 +50,8 @@
     .header__course-menu,
     .header__sysadmin-menu,
     .header__my-courses-menu {
+        display: inline-block;
+
         > * {
             display: inline-block;
             vertical-align: top;
