Run scripts on standalone layout for course tool

--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -55,6 +55,12 @@
 		{
 			<script src='@jsFile'></script>
 		}
+        <script>
+            for (var i = 0; i < window.documentReadyFunctions.length; i++) {
+                var f = window.documentReadyFunctions[i];
+                f();
+            }
+        </script>
 	</body>
 	</html>
 }
