--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -126,19 +126,29 @@
                 <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "AIML" }, new { @class = "btn btn-primary" })</p>
             </div>
         </div>
-        <div class="row">
-            <div class="course-tile col-md-6">
-                <h2>The Clean Code Game</h2>
-                <p>Длительность: 10–20 минут</p>
-                <p>
-                    Небольшая игра-тренажер на интерактивных примерах знакомит с базовыми правилами хорошего кода.
-                    Качественные имена, стиль именования, комментарии, разбиение кода на методы.
-                </p>
-                <p>
-                    <a class="btn btn-primary" href="https://cleancodegame.github.io">Поехали!</a>
-                </p>
-            </div>
-        </div>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Компьютерные сети</h2>
+				<p>Длительность: 1 семестр, 2-4 часа в неделю</p>
+				<p>
+					Курс разработан для студентов второго года обучения компьютерных специальностей УрФУ.
+					В курсе рассматриваются основы компьютерных сетей до транспортного уровня модели OSI.
+					Предварительных навыков и опыта не требуется.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Networks" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>The Clean Code Game</h2>
+				<p>Длительность: 10–20 минут</p>
+				<p>
+					Небольшая игра-тренажер на интерактивных примерах знакомит с базовыми правилами хорошего кода.
+					Качественные имена, стиль именования, комментарии, разбиение кода на методы.
+				</p>
+				<p>
+					<a class="btn btn-primary" href="https://cleancodegame.github.io">Поехали!</a>
+				</p>
+			</div>
+		</div>
 		
 		@Html.Partial("~/Views/Shared/_Footer.cshtml")
 	</div>
