--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -58,7 +58,7 @@
 				{
 					<p>
 						Проверяется преподавателем <b>@check.LockedBy.VisibleName</b>,
-						заблокирована ещё на&Nbsp;@{
+						заблокирована ещё на&nbsp;@{
 							                     var minutes = (int)(check.LockedUntil.Value - DateTime.Now).TotalMinutes;
 							                     @minutes.PluralizeInRussian(RussianPluralizationOptions.MinuteDative)
 						                     }
