CanUsersSeeGroupProgress groups's property is now editable from admin interface
+ fix bug with ajax POST form posting without url changing and further page reloading

--- a/src/uLearn.Web/Views/Account/JoinGroup.cshtml
+++ b/src/uLearn.Web/Views/Account/JoinGroup.cshtml
@@ -12,8 +12,12 @@
 		@Html.AntiForgeryToken()
 		<p>
 			@Model.Owner.VisibleName пригласил@(Model.Owner.Gender.ChooseEnding()) вас присоединиться к&nbsp;группе «@Model.Name».
-			Преподаватели группы смогут проверять ваши задания и тесты, проводить код-ревью и выставлять вам дополнительные баллы. 
-			Вступив, вы сможете смотреть ведомость всей группы прямо на&nbsp;сайте.
+			Преподаватели группы смогут проверять ваши задания и тесты, проводить код-ревью и выставлять вам дополнительные баллы.
+			
+			@if (Model.CanUsersSeeGroupProgress)
+			{
+				<text>Вступив, вы сможете смотреть ведомость всей группы прямо на&nbsp;сайте.</text>
+			}
 		</p>
 		<p class="help-block">
 			Чтобы преподаватели могли связаться с&nbsp;вами в&nbsp;случае необходимости, мы покажем им вашу электронную почту и привязанные аккаунты социальных сетей.
