--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -11,131 +11,126 @@
 		</div>
 
 		<div class="row">
-            <div class="course-tile col-md-6">
-                <h2>Основы программирования на примере C#. Часть 1</h2>
-                <p>
-                    Длительность курса: 1 семестр, 3–6 часов в неделю.
-                </p>
-                <p>
-                    Курс разработан для студентов первого года обучения компьютерных специальностей УрФУ.
-                    Рассчитан на людей с минимальным опытом программирования и знакомит 
-                    с основами синтаксиса C# и стандартными классами .NET, с основами ООП 
-                    и базовыми алгоритмами.
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
-            </div>
-            <div class="course-tile col-md-6">
-                <h2>Основы программирования на примере C#. Часть 2</h2>
-                <p>Длительность курса: 1 семестр, 3–6 часов в неделю.</p>
-                <p>
-                    Вторая часть курса Основы программирования на C# знакомит 
-                    с более сложными языковыми конструкциями: 
-                    обобщёнными типами (generics), 
-                    генераторами последовательностей, 
-                    LINQ, 
-                    а также с джентельменским набором алгоритмов и структур данных. 
-                    
-                    Рассчитан на людей, знакомых с основами синтаксиса C#.
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
-            </div>
+			<div class="course-tile col-md-6">
+				<h2>Основы программирования на примере C#. Часть 1</h2>
+				<p>
+					Длительность курса: 1 семестр, 3–6 часов в неделю.
+				</p>
+				<p>
+					Курс разработан для студентов первого года обучения компьютерных специальностей УрФУ.
+					Рассчитан на людей с минимальным опытом программирования и знакомит 
+					с основами синтаксиса C# и стандартными классами .NET, с основами ООП 
+					и базовыми алгоритмами.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6 banner">
+				<a href="https://kontur.ru/education/programs/kampus?utm_source=ulearn&utm_medium=kampus_banner">
+					<img src="~/Content/banner-campus.png" width="100%"/>
+				</a>
+			</div>
 		</div>
-        <div class="row">
-            <div class="course-tile col-md-6">
-                <h2>
-                    Проектирование <nobr>на языке C#</nobr>
-                </h2>
-                <p>
-                    Продолжение курса «Основы программирования».
-                    Внутри вы узнаете об&nbsp;основах объектно-ориентированного программирования
-                    и&nbsp;шаблонах проектирования ПО. Будет полезно для тех, кто прошёл курс «Основы программирования»,
-                    или для тех, кто уже владеет другим языком программирования.
-                </p>
-                <p>
-                    Длительность: 1 семестр, 1–2 часа в неделю
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "CS2" }, new { @class = "btn btn-primary" })</p>
-            </div>
-            <div class="course-tile col-md-6">
-                <h2>Основы компьютерной безопасности</h2>
-                <p>Длительность: 1 семестр, 2–6 часов в неделю</p>
-                <p>
-                    Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
-                    Рассчитан на людей с минимальным опытом программирования.
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="course-tile col-md-6">
-                <h2>Практикум по языку запросов LINQ</h2>
-                <p>
-                Длительность миникурса: 2–4 часа.
-                <p>
-                    В C# существует набор методов для декларативного описания
-                    манипуляции с данными — LINQ.
-                    Использование этих методов позволят обойтись без циклов,
-                    а следовательно делает код понятнее, короче.
-                    Но просто знать про LINQ мало, нужно привыкнуть его использовать.
-
-                    Этот мини-курс знакомит с основами LINQ
-                    на тщательно подобранных примерах и задачах —
-                    первый шаг к привычке писать код декларативно.
-                </p>
-                <p>
-                    Полезно и тем, кто поверхностно уже знаком с LINQ.
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
-            </div>
-            <div class="course-tile col-md-6">
-                <h2>
-                    Тестирование&nbsp;ПО
-                </h2>
-                <p>
-                    Курс дает базовые знания о&nbsp;тестировании программного обеспечения,
-                    знакомит с&nbsp;процессом разработки, инструментами и&nbsp;теорией тестирования.
-                </p>
-                <p>
-                    Длительность: 1 месяц, 3&ndash;4 часа в неделю
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Testing" }, new { @class = "btn btn-primary" })</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="course-tile col-md-6">
-                <h2>Оценка сложности алгоритмов</h2>
-                <p>
-                Длительность миникурса: 2 часа.
-                <p>
-                    Короткий курс-практикум, развивающий навык быстрой оценки сложности
-                    алгоримов и кода, который ежедневно пишут программисты.
-                </p>
-                <p>
-                    Курс содержит самый минимум теории и построен вокруг серии хорошо
-                    подобранных задач, демонстрирующих самые распространённые
-                    и типовые случаи, в которых навык оценки сложности оказывается полезным.
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "complexity" }, new { @class = "btn btn-primary" })</p>
-            </div>
-            <div class="course-tile col-md-6">
-                <h2>Искусственный интеллект и машинное обучение</h2>
-                <p>Длительность: 1 семестр, 1-2 часа в неделю</p>
-                <p>
-
-                </p>
-                <p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "AIML" }, new { @class = "btn btn-primary" })</p>
-            </div>
-        </div>
 		<div class="row">
 			<div class="course-tile col-md-6">
-				<h2>Компьютерные сети</h2>
-				<p>Длительность: 1 семестр, 2-4 часа в неделю</p>
+				<h2>Основы программирования на примере C#. Часть 2</h2>
+				<p>Длительность курса: 1 семестр, 3–6 часов в неделю.</p>
 				<p>
-					Курс разработан для студентов второго года обучения компьютерных специальностей УрФУ.
-					В курсе рассматриваются основы компьютерных сетей до транспортного уровня модели OSI.
-					Предварительных навыков и опыта не требуется.
+					Вторая часть курса Основы программирования на C# знакомит 
+					с более сложными языковыми конструкциями: 
+					обобщёнными типами (generics), 
+					генераторами последовательностей, 
+					LINQ, 
+					а также с джентельменским набором алгоритмов и структур данных. 
+                    
+					Рассчитан на людей, знакомых с основами синтаксиса C#.
 				</p>
-				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Networks" }, new { @class = "btn btn-primary" })</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>Основы компьютерной безопасности</h2>
+				<p>Длительность: 1 семестр, 2–6 часов в неделю</p>
+				<p>
+					Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
+					Рассчитан на людей с минимальным опытом программирования.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>
+					Проектирование <nobr>на языке C#</nobr>
+				</h2>
+				<p>
+					Продолжение курса «Основы программирования».
+					Внутри вы узнаете об&nbsp;основах объектно-ориентированного программирования
+					и&nbsp;шаблонах проектирования ПО. Будет полезно для тех, кто прошёл курс «Основы программирования»,
+					или для тех, кто уже владеет другим языком программирования.
+				</p>
+				<p>
+					Длительность: 1 семестр, 1–2 часа в неделю
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "CS2" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>
+					Тестирование&nbsp;ПО
+				</h2>
+				<p>
+					Курс дает базовые знания о&nbsp;тестировании программного обеспечения,
+					знакомит с&nbsp;процессом разработки, инструментами и&nbsp;теорией тестирования.
+				</p>
+				<p>
+					Длительность: 1 месяц, 3&ndash;4 часа в неделю
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Testing" }, new { @class = "btn btn-primary" })</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Практикум по языку запросов LINQ</h2>
+				<p>
+				Длительность миникурса: 2–4 часа.
+				<p>
+					В C# существует набор методов для декларативного описания
+					манипуляции с данными — LINQ.
+					Использование этих методов позволят обойтись без циклов,
+					а следовательно делает код понятнее, короче.
+					Но просто знать про LINQ мало, нужно привыкнуть его использовать.
+
+					Этот мини-курс знакомит с основами LINQ
+					на тщательно подобранных примерах и задачах —
+					первый шаг к привычке писать код декларативно.
+				</p>
+				<p>
+					Полезно и тем, кто поверхностно уже знаком с LINQ.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>Искусственный интеллект и машинное обучение</h2>
+				<p>Длительность: 1 семестр, 1-2 часа в неделю</p>
+				<p>
+
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "AIML" }, new { @class = "btn btn-primary" })</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Оценка сложности алгоритмов</h2>
+				<p>
+				Длительность миникурса: 2 часа.
+				<p>
+					Короткий курс-практикум, развивающий навык быстрой оценки сложности
+					алгоримов и кода, который ежедневно пишут программисты.
+				</p>
+				<p>
+					Курс содержит самый минимум теории и построен вокруг серии хорошо
+					подобранных задач, демонстрирующих самые распространённые
+					и типовые случаи, в которых навык оценки сложности оказывается полезным.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "complexity" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile col-md-6">
 				<h2>The Clean Code Game</h2>
@@ -147,6 +142,18 @@
 				<p>
 					<a class="btn btn-primary" href="https://cleancodegame.github.io">Поехали!</a>
 				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Компьютерные сети</h2>
+				<p>Длительность: 1 семестр, 2-4 часа в неделю</p>
+				<p>
+					Курс разработан для студентов второго года обучения компьютерных специальностей УрФУ.
+					В курсе рассматриваются основы компьютерных сетей до транспортного уровня модели OSI.
+					Предварительных навыков и опыта не требуется.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Networks" }, new { @class = "btn btn-primary" })</p>
 			</div>
 		</div>
 		
