--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -1,4 +1,5 @@
 ﻿@using uLearn.Web.Extensions
+@using Ulearn.Common.Extensions
 @model uLearn.Web.Controllers.PackagesViewModel
 
 @{
@@ -22,7 +23,7 @@
     {
 	    <div class="course-loading-error">
             <p class="text-danger">
-                <b>Ошибка в&nbsp;архиве:</b> @Model.Error
+                <b>Ошибка в&nbsp;архиве:</b> @Html.Raw(Model.Error.EscapeHtml().LineEndingsToBrTags())
             </p>
             <p class="text-muted">
                 Если вы не&nbsp;понимаете, почему произошла эта ошибка, напишите нам на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
