Support HTML highlighting on the slide

--- a/src/CourseTool/templates/code.html
+++ b/src/CourseTool/templates/code.html
@@ -11,6 +11,8 @@
 		<script src="codemirror.js"></script>
 		<script src="clike.js"></script>
 		<script src="python.js"></script>
+		<script src="xml.js"></script>
+		<script src="htmlembedded.js"></script>
 		<script src="matchbrackets.js"></script>
 		<script src="slide-editor.js"></script>
 	</body>
