Fix gallery views
+ order images in gallery by filename

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -176,7 +176,7 @@
 	</div>
 }
 
-@helper Block(ImageGaleryBlock block, BlockRenderContext context, HtmlHelper Html)
+@helper Block(ImageGalleryBlock block, BlockRenderContext context, HtmlHelper Html)
 {
 	<div class="flexslider">
 		<ul class="slides">
