Isolate legacy HTML content from new one with CSS class
Add '.legacy-page' to any content with old styles. It allows us don't mix old, vanilla css, and new, react+less, styles

--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -1,10 +1,7 @@
-﻿@using Database
-@using Database.Extensions
-@using Database.Models
+﻿@using Database.Extensions
 @using uLearn
 @using uLearn.Extensions
 @using uLearn.Web.Controllers
-@using uLearn.Web.Extensions
 <!DOCTYPE html>
 <html>
 <head>
