Fix cursor on header mobile version

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -54,6 +54,7 @@
     .header__sysadmin-menu,
     .header__my-courses-menu {
         display: inline-block;
+		cursor: pointer;
 
         > * {
             display: inline-block;
