--- a/src/Frontend/src/pages/course/groups/groupSettings.less
+++ b/src/Frontend/src/pages/course/groups/groupSettings.less
@@ -31,7 +31,7 @@ h2 {
   font-size: 32px;
   line-height: 40px;
   margin: 0 0 10px 0;
-  border-bottom: 1px solid #EBEBEB;
+  border-bottom: 1px solid #ebebeb;
   padding: 30px 0;
 }
 
@@ -43,10 +43,9 @@ h3 {
   font-weight: 500;
 }
 
-.wrapper {
-  width: 55%;
-  margin: 20px auto;
-  background: #fff;
+.content {
+  width: 80%;
+  margin: 0 auto;
 }
 
 .tabs-container {
@@ -60,13 +59,46 @@ h3 {
   }
 }
 
+.group-settings-wrapper {
+  border-bottom: 1px solid #ebebeb;
+  margin-bottom: 40px;
+}
+
+.teacher-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 20px 0;
+
+	img::before {
+	  content: '\1F63A';
+	}
+
+  .teacher-block-name {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	margin-left: 30px;
+  }
+}
+
 .group-name-field {
   margin-top: 20px;
 }
 
 .group-name-label {
-  width: 12%;
+  width: 20%;
   display: inline-block;
+  line-height: 30px;
+
+  label {
+	font-size: 22px;
+	font-weight: 500;
+  }
+
+  input {
+	width: 80%;
+  }
 }
 
 label {
@@ -76,4 +108,8 @@ label {
   input {
 	max-width: 100%;
   }
+}
+
+.students-block-invite {
+  margin: 10px 0 20px;
 }
