--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  font-family: "Segoe UI",Arial,sans-serif;
-}
-
 button {
   border: 0;
   color: #404040;
@@ -24,7 +19,6 @@ a {
   text-decoration: none;
 }
 
-
 h2 {
   font-weight: 500;
   text-align: left;
@@ -42,18 +36,53 @@ h3 {
   font-weight: 500;
 }
 
+.wrapper {
+  width: 100%;
+  background-color: #f2f2f2;
+  margin: 0 auto;
+}
+
+.content-wrapper {
+  background: #fff;
+  width: 70%;
+  margin: 0 auto;
+}
+
 .content {
   width: 80%;
   margin: 0 auto;
 }
 
-.tabs-container {
-  a:hover {
-	text-decoration: none;
-	color: #333;
-	//border-bottom: none;
+.group-settings-wrapper {
+  border-bottom: 1px solid #ebebeb;
+  width: 70%;
+  margin: 0 auto 40px;
+}
+
+.group-name-field {
+  margin-top: 20px;
+}
+
+.group-name-label {
+  width: 20%;
+  display: inline-block;
+  line-height: 30px;
+
+  label {
+	font-size: 22px;
+	font-weight: 500;
   }
-  a:focus {
-	text-decoration: none;
+
+  input {
+	width: 80%;
+  }
+}
+
+label {
+  font-weight: 400;
+  width: 100%;
+
+  input {
+	max-width: 100%;
   }
 }
