--- a/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
@@ -1,22 +1,35 @@
+@import "../../../../variables.less";
+
 .group-header {
-  display: flex;
+  //display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
-  width: 80%;
+  width: 70%;
+  //height: 100%;
   margin: 0 auto;
-  position: sticky;
+  //position: sticky;
   top: 50px;
   z-index: 99;
   background: #fff;
   //border-bottom: 1px solid  #d9d9d9;
   box-shadow:   0 5px 5px -5px rgba(0,0,0,.2);
 
+  @media (max-width: @maxTabletWidth) {
+	display: block;
+	border-bottom: none;
+  }
+
   .group-header-container{
 	display: flex;
 	align-items: baseline;
 	justify-content: space-between;
 	border-bottom: 1px solid #ebebeb ;
+
+	@media (max-width: @maxTabletWidth		) {
+	  display: block;
+	  border-bottom: none;
+	}
   }
 
   h2 {
@@ -26,14 +39,31 @@
 	line-height: 40px;
 	border: none;
 	padding-bottom: 0;
+
+	@media (max-width: @maxPhoneWidth) {
+	  font-size: 22px;
+	}
   }
 
   .buttons-container {
-	margin-bottom: 20px;
+	margin: 20px 0;
+
+	button {
+	  @media (max-width: @maxPhoneWidth) {
+		font-size: 12px;
+	  }
+	}
   }
 
   .tabs-container {
 	margin-top: 30px;
+
+	a {
+	  @media (max-width: @maxPhoneWidth) {
+		font-size: 12px;
+	  }
+	}
+
 	a:hover {
 	  text-decoration: none;
 	  color: #333;
