--- a/src/Frontend/src/pages/course/groups/groupsPage.less
+++ b/src/Frontend/src/pages/course/groups/groupsPage.less
@@ -1,6 +1,11 @@
+html, body, #root {
+  height: 100%;
+}
+
 body {
   font-family: "Segoe UI",Arial,sans-serif;
   margin: 0;
+  padding-bottom: 0;
 }
 
 a {
@@ -28,10 +33,13 @@ button {
   width: 100%;
   background-color: #f2f2f2;
   margin: 0 auto;
+  //height: 100%;
+  min-height: 100%;
 }
 
 .content-wrapper {
   background: #fff;
   width: 70%;
   margin: 0 auto;
+  height: 100%;
 }
