--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -18,7 +18,7 @@
 			<link href='@cssFile' rel='stylesheet'/>
 		}
 	</head>
-	<body class="without-topbar">
+	<body class="without-topbar legacy-page">
 		<div class='side-bar navbar-collapse collapse navbar-nav container'>
 			@TableOfContents.Toc(toc)
 		</div>
