Logins (usernames) should not contain "@"

--- a/src/uLearn.Web/Views/Account/Register.cshtml
+++ b/src/uLearn.Web/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@using uLearn.Web.Extensions
 @using Ulearn.Common
-@model RegisterViewModel
+@model RegistrationViewModel
 @{
 	ViewBag.Title = "Регистрация";
 }
