Authentication via email
1. Users can login via email/password
2. Logins can not contain @
3. Is user confirm email other users with this email lose confirmation
4. Different users can not use one email

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1366,6 +1366,10 @@ body.lti-component {
 	margin-bottom: 15px;
 }
 
+.legacy-page .login-and-registration-form .col-sm-10 > .validation-summary-errors {
+	margin-bottom: 0;
+} 
+
 .legacy-page .login-and-registration-form .checkbox label::before,
 .legacy-page .login-and-registration-form .radio label::before {
 	border-width: 2px;
