--- a/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
@@ -25,7 +25,12 @@
 	{
 		@Html.AntiForgeryToken()
 
-		@Html.ValidationSummary(true)
+		<div class="form-group">
+			<div class="col-sm-10 col-sm-offset-2">
+				@Html.ValidationSummary(true)
+			</div>
+		</div>
+		
 		<div class="form-group">
 			<div class="col-sm-2 control-label">Логин</div>
 			<div class="col-sm-10">
