--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -7,7 +7,12 @@
 		<div class="row">
 			<h2 class="col-sm-10 col-sm-offset-2 space-after">Изменить пароль</h2>
 		</div>
-		@Html.ValidationSummary(true)
+		
+		<div class="form-group">
+			<div class="col-sm-10 col-sm-offset-2">
+				@Html.ValidationSummary(true)
+			</div>
+		</div>
 
 		<div class="form-group">
 			<div class="col-sm-2 control-label">Старый</div>
