--- a/src/uLearn.Web/Views/Login/_LoginForm.cshtml
+++ b/src/uLearn.Web/Views/Login/_LoginForm.cshtml
@@ -5,7 +5,7 @@
 	{
 		@Html.AntiForgeryToken()
 		<div class="form-group">
-			@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Логин", autofocus = "autofocus" })
+			@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Логин или емэйл", autofocus = "autofocus" })
 			@Html.ValidationMessageFor(m => m.UserName)
 		</div>
 		<div class="form-group">
@@ -21,7 +21,16 @@
 		<div class="form-group">
 			<input type="submit" value="Войти" class="ph-btn ph-btn-green btn-block"/>
 		</div>
-		@Html.ValidationSummary(true)
+		{
+			/* See private method ValidationExtensions.GetModelStateList(Html, true) */
+			ModelState modelState;
+			ViewData.ModelState.TryGetValue(ViewData.TemplateInfo.HtmlFieldPrefix, out modelState);
+			if (modelState != null && modelState.Errors.Any())
+			{
+				/* Show validation summary only if at least one error exists */
+				@Html.ValidationSummary(true)				
+			}
+		}
 		<div class="form-group">
 			<p>
 				@Html.ActionLink("Зарегистрироваться", "Register", "Account", new { ViewBag.ReturnUrl }, new { }) — если у вас ещё нет аккаунта
