Groups API: scoring group settings
+ fix bug with bootstrap modals + .legacy-page

--- a/src/uLearn.Web/Content/modals.css
+++ b/src/uLearn.Web/Content/modals.css
@@ -25,7 +25,8 @@
 }
 
 /* Modal header tabs*/
-.modal-header__tabs {
+.modal-header__tabs,
+ul.modal-header__tabs {
 	margin: -14px 0 -15px;
 	padding-left: 0;
 	font-size: 16px;
