--- a/src/uLearn.Web/Content/bootstrap.css
+++ b/src/uLearn.Web/Content/bootstrap.css
@@ -5914,7 +5914,7 @@ button.close {
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
           box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
 }
-.legacy-page .modal-backdrop {
+.modal-backdrop {
   position: fixed;
   top: 0;
   right: 0;
@@ -5923,11 +5923,11 @@ button.close {
   z-index: 1040;
   background-color: #000;
 }
-.legacy-page .modal-backdrop.fade {
+.modal-backdrop.fade {
   filter: alpha(opacity=0);
   opacity: 0;
 }
-.legacy-page .modal-backdrop.in {
+.modal-backdrop.in {
   filter: alpha(opacity=50);
   opacity: .5;
 }
