--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -25,12 +25,12 @@
 }
     
 <script>
-    window.meta = {
-        title: "@(metaTitle)",
-        description: "@(metaDescription)",
-        keywords: "@(metaKeywords)",
-        imageUrl: "@(metaImageUrl)"
-    }
+	window.meta = {
+		title: "@(metaTitle)",
+		description: "@(metaDescription)",
+		keywords: "@(metaKeywords)",
+		imageUrl: "@(metaImageUrl)"
+	}
 </script>
 
 @*
@@ -131,6 +131,25 @@
 @Html.Action("CheckIsEmailConfirmed", "Account")
 
 @RenderSection("scripts", required: false)
+
+<script>
+	/* Temporary bug workaround: unregister all service workers */
+	function unregisterServiceWorker() {
+		if (window.navigator && navigator.serviceWorker) {
+			navigator.serviceWorker.getRegistrations()
+				.then(function (registrations) {
+					for (var registrationId in registrations) {
+						if (registrations.hasOwnProperty(registrationId)) {
+							var registration = registrations[registrationId];
+							registration.unregister();
+						}
+					}
+				});
+		}
+	}
+
+	unregisterServiceWorker();
+</script>
 
 @if (AccountController.IsHijacked(HttpContext.Current.Request))
 {
